# hackathon-kaspersky-KOSmos

./: README.md
hello/: README.md  results.txt
hello/hello/src/: hello.c
mqtt_subscriber/: CMakeLists.txt  result.txt
mqtt_subscriber/einit/: CMakeLists.txt
mqtt_subscriber/einit/src/: init.yaml.in
mqtt_subscriber/resources/cdl/: Printnum.cdl
mqtt_subscriber/showapp/: CMakeLists.txt
mqtt_subscriber/showapp/src/: showapp.cpp
mqtt_subscriber/subscriber/src/: main.cpp  subscriber.cpp
